tdf#90905 fix for url encoding in internal urls

Do not try to use INetURLObject class for encoding of internal document links.
External URLs are encoded as before.

Change-Id: I90621819ed21c3f793171ac4ab3fc7d49ac69f56